@@ -1,15 +1,22 @@
 # vim: set noexpandtab:
+
+2013-02-13 Steve
+	* Added isOppSign method for lep, tau
+	* Added support for applying tau systematics
+		* Added setState method to Tau class
+		* Added support for tes_up and tes_dn in getBaselineObjects
+
 2013-02-12 Matt
 	* Updated BTagSF code (Copied and modified from SUSYTools) and modified corresponding SusyNtTools function
 	* If 2lep flag is set, you will get the unbiased IP
 	* Btag eff maps added (root file) along with .env file to load them properly
 	* Added MV1_80 (which will be the new operating point). Now the default in get bTagSF.
-	
+
 2013-02-11 Matt
 	* Updated central jet eta cut from 2.5 to 2.4
 	* Fixed bug in initialization of DilTriggerLogic.  Fixes printouts.
 	* Default trigger weight set to Moriond (changed from HCP)
-	
+
 2013-02-10 Steve
 	* Added tau eff and electron veto SFs and uncerts
 	* Added tau systematic enums: TES_UP, TES_DN
